<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.android.musicapp.MainActivity">

    <TextView
        android:id="@+id/now_playing"
        style="@style/CategoryStyle"
        android:background="@color/categoryNowPlaying"
        android:text="@string/activity_now_playing" />

    <TextView
        android:id="@+id/library"
        style="@style/CategoryStyle"
        android:background="@color/categoryLibrary"
        android:text="@string/activity_library" />

    <TextView
        android:id="@+id/podcast"
        style="@style/CategoryStyle"
        android:background="@color/categoryPodcast"
        android:text="@string/activity_podcast" />

    <TextView
        android:id="@+id/whats_streaming"
        style="@style/CategoryStyle"
        android:background="@color/categoryWhatsStreaming"
        android:text="@string/activity_whats_streaming" />

</LinearLayout>
