<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.android.musicapp.NowPlayingActivity">

    <TextView
        android:id="@+id/library"
        style="@style/CategoryStyle"
        android:background="@color/categoryLibrary"
        android:text="@string/activity_library" />

    <TextView
        android:id="@+id/whats_streaming"
        style="@style/CategoryStyle"
        android:background="@color/categoryWhatsStreaming"
        android:text="@string/activity_whats_streaming" />

    <TextView
        style="@style/CategoryStyle"
        android:background="@color/info"
        android:layout_margin="10dp"
        android:text="@string/now_playing_info" />

</LinearLayout>
